remove api keys

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "aws-s3": "^2.0.5",
     "aws-sdk": "^2.1013.0",
     "axios": "^0.23.0",
+    "dotenv": "^10.0.0",
     "ioredis": "^4.28.0",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.0-rc.14",
