--- a/architecture_setup/package.json
+++ b/architecture_setup/package.json
@@ -11,6 +11,7 @@
         "@pulumi/awsx": "^0.30.0",
         "@pulumi/pulumi": "^3.0.0",
         "aws-sdk": "^2.1013.0",
+        "dotenv": "^10.0.0",
         "ioredis": "^4.28.0",
         "uuid": "^3.3.2"
     }
